Related: fdo#87242 init VirtualDevice with size of surface

otherwise vcl's clipping doesn't work quite right when the render text
with vcl apis fallback is used.

Manually forced in my case, but it should happen in practice with vertical
text, so if there is a bug about vertical text not appearing in slideshows then
this is part of the fix for that.

Windows and Mac remain unchanged as initialized with 1, 1. If the same problem
affects those platforms then they'll need to be adjusted to remember their
height/widths from the ctor and those values plugged in here instead

Change-Id: I2f82f0db0cf446d7db21f0a7ee4f8c15c7ebdb42
(cherry picked from commit f95b0743da4239e047db8638c61f90f8bbe54306)