include/vcl/virdev.hxx
@@ -116,7 +116,8 @@ public:
         Any rendering will happen directly on the context and not on any intermediate bitmap.
         Note: This might not be supported on all platforms !
     */
-    explicit            VirtualDevice( const SystemGraphicsData *pData, sal_uInt16 nBitCount );
+    explicit            VirtualDevice(const SystemGraphicsData *pData, const Size &rSize,
+                                      sal_uInt16 nBitCount);
 
     virtual             ~VirtualDevice();
 
